# AIProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  build_and_run_for_dev.sh  run.sh  runJoueur.sh  runServeur.sh
Ref/: ExempleComC.java  JSicstus.java  validation.h
src/lib/c/SCS-Lib/: Definitions.h  fonctionsTCP.c  fonctionsTCP.h  fonctionsUDP.c  fonctionsUDP.h
src/main/c/: JoueurEngine.c  JoueurEngine.h  joueur.c  server.c  serveurArbitre.c  serveurArbitre.h
src/main/java/: JavaEngine.java  YJPlateau.java  YokaiJavaEngineProtocol.java
src/prolog/: DeplacementPiecesYokai.pl  DeplacementPiecesYokai.pl~  Yokai.pl  yokai.pl~  yokaiia.pl
src/protocol/c/: ProtocolYokaiEngine.h  YokaiJavaEngineProtocol.c  YokaiJavaEngineProtocol.h  fonctionsTCP.h  protocolYokai.h  validation.h
src/test/c/: testClient.c
